--- a/FlyffNetwork.vcxproj.filters
+++ b/FlyffNetwork.vcxproj.filters
@@ -13,6 +13,18 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Source Files\util">
+      <UniqueIdentifier>{bfaf3455-2026-4e44-a2b9-0c9b6a7e0e69}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\io">
+      <UniqueIdentifier>{e7ae5f20-145a-41bf-891a-2bb5f5a14029}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\io\network">
+      <UniqueIdentifier>{cd6dea7f-e795-4694-b71c-47c76b94a5f8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\io\network\emit">
+      <UniqueIdentifier>{f48e52f3-c9ad-47a3-8b8f-322462cec047}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\dllmain_fnetwork.cpp">
@@ -21,6 +33,24 @@
     <ClCompile Include="source\pch_fnetwork.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\io\network\socket_client.cpp">
+      <Filter>Source Files\io\network</Filter>
+    </ClCompile>
+    <ClCompile Include="source\io\network\network.cpp">
+      <Filter>Source Files\io\network</Filter>
+    </ClCompile>
+    <ClCompile Include="source\io\network\emit\transaction.cpp">
+      <Filter>Source Files\io\network\emit</Filter>
+    </ClCompile>
+    <ClCompile Include="source\io\network\emit\transaction_client.cpp">
+      <Filter>Source Files\io\network\emit</Filter>
+    </ClCompile>
+    <ClCompile Include="source\io\network\emit\packet_builder.cpp">
+      <Filter>Source Files\io\network\emit</Filter>
+    </ClCompile>
+    <ClCompile Include="source\io\network\emit\transaction_emit.cpp">
+      <Filter>Source Files\io\network\emit</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\pch_fnetwork.h">
@@ -28,6 +58,27 @@
     </ClInclude>
     <ClInclude Include="source\framework_fengine.h">
       <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\util\log.hpp">
+      <Filter>Source Files\util</Filter>
+    </ClInclude>
+    <ClInclude Include="source\io\network\socket.hpp">
+      <Filter>Source Files\io\network</Filter>
+    </ClInclude>
+    <ClInclude Include="source\io\network\socket_client.hpp">
+      <Filter>Source Files\io\network</Filter>
+    </ClInclude>
+    <ClInclude Include="source\io\network\network.hpp">
+      <Filter>Source Files\io\network</Filter>
+    </ClInclude>
+    <ClInclude Include="source\io\network\emit\transaction.hpp">
+      <Filter>Source Files\io\network\emit</Filter>
+    </ClInclude>
+    <ClInclude Include="source\io\network\emit\packet_structure.hpp">
+      <Filter>Source Files\io\network\emit</Filter>
+    </ClInclude>
+    <ClInclude Include="source\io\network\emit\packet_builder.hpp">
+      <Filter>Source Files\io\network\emit</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
