creation d'un manager de message, callback via pointeur du fonction member

--- a/FlyffNetwork.vcxproj.filters
+++ b/FlyffNetwork.vcxproj.filters
@@ -28,6 +28,9 @@
     <Filter Include="Source Files\crypto">
       <UniqueIdentifier>{5a3bfdfb-a04e-472e-bb66-e4d68a943fc8}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\io\network\message">
+      <UniqueIdentifier>{1d5ab3c1-e534-45be-83d4-12c91542e327}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\dllmain_fnetwork.cpp">
@@ -56,6 +59,9 @@
     </ClCompile>
     <ClCompile Include="source\crypto\crc32.cpp">
       <Filter>Source Files\crypto</Filter>
+    </ClCompile>
+    <ClCompile Include="source\io\network\message\handler_message.cpp">
+      <Filter>Source Files\io\network\message</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -88,6 +94,9 @@
     </ClInclude>
     <ClInclude Include="source\crypto\crc32.hpp">
       <Filter>Source Files\crypto</Filter>
+    </ClInclude>
+    <ClInclude Include="source\io\network\message\handler_message.hpp">
+      <Filter>Source Files\io\network\message</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
