--- a/FlyffNetwork.vcxproj
+++ b/FlyffNetwork.vcxproj
@@ -25,6 +25,7 @@
     <ClCompile Include="source\io\network\emit\transaction.cpp" />
     <ClCompile Include="source\io\network\emit\transaction_client.cpp" />
     <ClCompile Include="source\io\network\emit\transaction_emit.cpp" />
+    <ClCompile Include="source\io\network\message\handler_message.cpp" />
     <ClCompile Include="source\io\network\network.cpp" />
     <ClCompile Include="source\io\network\socket_client.cpp" />
     <ClCompile Include="source\pch_fnetwork.cpp">
@@ -38,6 +39,7 @@
     <ClInclude Include="source\io\network\emit\packet_builder.hpp" />
     <ClInclude Include="source\io\network\emit\packet_structure.hpp" />
     <ClInclude Include="source\io\network\emit\transaction.hpp" />
+    <ClInclude Include="source\io\network\message\handler_message.hpp" />
     <ClInclude Include="source\io\network\network.hpp" />
     <ClInclude Include="source\io\network\socket.hpp" />
     <ClInclude Include="source\io\network\socket_client.hpp" />
