structure du paquet avec le login server OK

--- a/FlyffNetwork.vcxproj.filters
+++ b/FlyffNetwork.vcxproj.filters
@@ -72,6 +72,15 @@
     <ClCompile Include="source\io\network\message\handler_message.cpp">
       <Filter>Source Files\io\network\message</Filter>
     </ClCompile>
+    <ClCompile Include="source\handler\handler_login.cpp">
+      <Filter>Source Files\handler</Filter>
+    </ClCompile>
+    <ClCompile Include="source\io\network\message\handler_message_receive.cpp">
+      <Filter>Source Files\io\network\message</Filter>
+    </ClCompile>
+    <ClCompile Include="source\io\network\message\handler_message_emit.cpp">
+      <Filter>Source Files\io\network\message</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\pch_fnetwork.h">
@@ -112,6 +121,9 @@
     </ClInclude>
     <ClInclude Include="source\io\network\message\handler_message.hpp">
       <Filter>Source Files\io\network\message</Filter>
+    </ClInclude>
+    <ClInclude Include="source\handler\handler_login.hpp">
+      <Filter>Source Files\handler</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
