realisation d'un prompt pout le ClientTest

--- a/samples/ClientTest/ClientTest.vcxproj
+++ b/samples/ClientTest/ClientTest.vcxproj
@@ -144,7 +144,13 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="certifier.cpp" />
+    <ClCompile Include="login.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="prompt.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="header.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
