--- a/FlyffNetwork.vcxproj.filters
+++ b/FlyffNetwork.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="source\io\network\message\handler_message_emit.cpp">
       <Filter>Source Files\io\network\message</Filter>
     </ClCompile>
+    <ClCompile Include="source\handler\handler_login_emit.cpp">
+      <Filter>Source Files\handler</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\pch_fnetwork.h">
