Recuperation de la liste des joueurs
LoginServer, recuperation de la listes des joueurs. Auto Close connection Certifier.

--- a/samples/ClientTest/ClientTest.vcxproj
+++ b/samples/ClientTest/ClientTest.vcxproj
@@ -145,6 +145,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="certifier.cpp" />
+    <ClCompile Include="cmd_certifier.cpp" />
+    <ClCompile Include="cmd_login.cpp" />
     <ClCompile Include="login.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="prompt.cpp" />
