--- a/FlyffNetwork.vcxproj
+++ b/FlyffNetwork.vcxproj
@@ -21,6 +21,8 @@
   <ItemGroup>
     <ClCompile Include="source\crypto\crc32.cpp" />
     <ClCompile Include="source\dllmain_fnetwork.cpp" />
+    <ClCompile Include="source\handler\handler_cache.cpp" />
+    <ClCompile Include="source\handler\handler_cache_emit.cpp" />
     <ClCompile Include="source\handler\handler_certifier.cpp" />
     <ClCompile Include="source\handler\handler_certifier_emiter.cpp" />
     <ClCompile Include="source\handler\handler_login.cpp" />
@@ -42,6 +44,7 @@
   <ItemGroup>
     <ClInclude Include="source\crypto\crc32.hpp" />
     <ClInclude Include="source\framework_fengine.h" />
+    <ClInclude Include="source\handler\handler_cache.hpp" />
     <ClInclude Include="source\handler\handler_certifier.hpp" />
     <ClInclude Include="source\handler\handler_login.hpp" />
     <ClInclude Include="source\io\network\emit\packet_builder.hpp" />
