--- a/samples/ClientTest/ClientTest.vcxproj.filters
+++ b/samples/ClientTest/ClientTest.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClCompile Include="cmd_login.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="cmd_cache.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cache.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.hpp">
