Traitement du snap DEST_POS
CacheServer

--- a/samples/ClientTest/ClientTest.vcxproj
+++ b/samples/ClientTest/ClientTest.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="certifier.cpp" />
     <ClCompile Include="cmd_certifier.cpp" />
     <ClCompile Include="cmd_login.cpp" />
+    <ClCompile Include="cmd_tips.cpp" />
     <ClCompile Include="login.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="prompt.cpp" />
