--- a/samples/ClientTest/ClientTest.vcxproj.filters
+++ b/samples/ClientTest/ClientTest.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="cache.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="cmd_tips.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.hpp">
