--- a/FlyffNetwork.vcxproj.filters
+++ b/FlyffNetwork.vcxproj.filters
@@ -143,5 +143,8 @@
     <ClInclude Include="source\io\network\message\snapshot_type.hpp">
       <Filter>Source Files\io\network\message</Filter>
     </ClInclude>
+    <ClInclude Include="source\util\vector.hpp">
+      <Filter>Source Files\util</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
